Fix navbar z-index
Moves the navbar to be the topmost element in the page. This fixes the
issue of the navbar being rendered behind text.

--- a/static/css/cornellcsl.css
+++ b/static/css/cornellcsl.css
@@ -888,6 +888,7 @@ footer a#back_to_top i {
   z-index:9999!important
 }
 .navbar {
+  z-index: 9999 !important;
   border: 0px;
   border-radius: 0px;
   min-height: 70px !important;
